--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
     ],
     "content_scripts": [
     {
-        "matches": ["https://portal.nctu.edu.tw/portal/login.php", "https://portal.nctu.edu.tw/portal/chkpas.php?"],
+        "matches": ["https://portal.nctu.edu.tw/portal/login.php", "https://portal.nctu.edu.tw/portal/chkpas.php*"],
         "js": ["jquery-3.2.1.js","login.js"],
         "permissions":["storage"]
     }],
