--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,10 @@
     "permissions": [
         "activeTab",
         "storage",
-        "*://nasa.cs.nctu.edu.tw/*"
+        "<all_urls>",
+        "*://nasa.cs.nctu.edu.tw/*",
+        "*://140.113.214.183:5000/*",
+        "*://www.google.com/*"
     ],
     "content_scripts": [
     {
